Increase Wizard button margin and reduce URL input min-width to fix overlap

--- a/couchpotato/static/style/settings.scss
+++ b/couchpotato/static/style/settings.scss
@@ -610,6 +610,7 @@
 		text-decoration: none;
 		white-space: nowrap;
 		padding: 4px 8px;
+		margin: 0 8px;
 
 		&:hover {
 			text-decoration: underline;
@@ -618,7 +619,7 @@
 
 	.apprise-url-input {
 		flex: 1;
-		min-width: 180px;
+		min-width: 100px;
 		padding: 5px 8px;
 		border: 1px solid transparent;
 		@include theme(border-color, off);
